# fabsim-example-project

./: .gitignore  .gitmodules  .polyscope.ini  CLAUDE.md  CMakeLists.txt  imgui.ini
FDM/: autodiff.py  bending_active.py  check_optim_progress.py  directional_field_D5.py  export_C5_optim_result.py  export_optim_geometry.py  fofin_B5.py  fofin_C5.py  fofin_C5_dense.py  fofin_C5_smooth.py  fofin_D5.py  fofin_butt.py  fofin_butt_session.py  fofin_cross.py  fofin_cross_session.py  fofin_inf.py  fofin_init.py  fofin_init_butt.py  fofin_seismic.py  fofin_seismic_session.py  optimise_B5.py  optimise_B5_multiscale.py  optimise_C5.py  optimise_C5_16region.py  optimise_D5.py  optimise_D5_3region.py  optimise_D5_4region.py  optimise_D5_4region_adaptive.py  optimise_D5_laplacian.py  remesh_C5.py  scale_geometry.py  select_material.py  square_crease.py  temp.py  visualise.py  visualise_B5.py  visualise_B5_9regions.py  visualise_B5_deviation.py  visualise_B5_optim.py  visualise_B5_regions.py  (+10 more)
FDM/data/: 2part.json  C5_optimised_inflated.off  C5_remeshed.off  cross_vault.json  cross_vault_smooth_formdiagram.json  dome_flat.json  mesh.json  mesh_out.json  mesh_out_20240227154444.json  mesh_out_20240227154507.json  mesh_out_20240227154824.json  mesh_out_20240306151613.json  mesh_out_20240306152440.json  mesh_out_20240306153955.json  mesh_out_20240306154501.json  mesh_out_20240306155047.json  mesh_out_20240306155455.json  mesh_out_20240306160022.json  mesh_out_20240306160120.json  mesh_out_20240306160911.json  mesh_out_20240306161024.json  mesh_out_20240306161427.json  mesh_out_20240306162012.json  mesh_out_20240306162503.json  mesh_out_20240306163411.json  mesh_out_20240306163825.json  mesh_out_20240306164222.json  mesh_out_20240306164614.json  mesh_out_20240306170904.json  mesh_out_20240306171338.json  mesh_out_20240306172429.json  mesh_out_20240306173723.json  mesh_out_2part_20240802000850.json  mesh_out_2parts_20240802000525.json  mesh_out_2parts_20240802001328.json  mesh_out_2parts_20240802002320.json  mesh_out_2parts_20240802010532.json  mesh_out_B5_20260501213116.json  mesh_out_C5_20260504124942.json  mesh_out_C5_20260504132937.json  (+50 more)
FDM/data/input/: C5.objbak
FDM/hanging_fofin/: hanging_butt.py  hanging_butt_steps.py
FDM/optimisation/: .syncthing.d5_4ra_cable2_00011_verts.csv.tmp  .syncthing.d5_4ra_cable2_00012_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00013_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00013_stress.csv.tmp  .syncthing.d5_4ra_cable2_00016_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00016_stress.csv.tmp  .syncthing.d5_4ra_cable2_00017_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00017_stress.csv.tmp  .syncthing.d5_4ra_cable2_00018_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00018_stress.csv.tmp  .syncthing.d5_4ra_cable2_00020_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00021_stress.csv.tmp  .syncthing.d5_4ra_cable2_00022_stress.csv.tmp  .syncthing.d5_4ra_cable2_00022_verts.csv.tmp  .syncthing.d5_4ra_cable2_00023_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00023_stress.csv.tmp  .syncthing.d5_4ra_cable2_00024_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00024_stress.csv.tmp  .syncthing.d5_4ra_cable2_00024_verts.csv.tmp  .syncthing.d5_4ra_cable2_00025_verts.csv.tmp  .syncthing.d5_4ra_cable2_00026_verts.csv.tmp  .syncthing.d5_4ra_cable2_00027_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00028_stress.csv.tmp  .syncthing.d5_4ra_cable2_00029_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00030_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00030_stress.csv.tmp  .syncthing.d5_4ra_cable2_00032_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00032_stress.csv.tmp  .syncthing.d5_4ra_cable2_00032_verts.csv.tmp  .syncthing.d5_4ra_cable2_00033_scalars.csv.tmp  .syncthing.d5_4ra_cable2_00033_verts.csv.tmp  .syncthing.d5_4ra_cable2_00034_scalars.csv.tmp  (+26349 more)
data/: B5_flat.off  B5_interior_idx.npy  B5_optimised.off  B5_remeshed_flat.off  B5_remeshed_interior_idx.npy  B5_remeshed_shared.off  B5_remeshed_shared_1p5m.off  B5_remeshed_shared_2p0m.off  B5_remeshed_shared_3p0m.off  B5_remeshed_target_verts.npy  B5_shared.off  B5_target_verts.npy  C5_remeshed.off  cable_indices.txt  cable_paths_B5.json  cable_paths_B5_remeshed.json  cable_paths_C5.json  circular_flat.off  circular_flat_cable.off  circular_flat_fdm.off  triangle.off  triangle_xy.off
sensitivity_analysis/: cable_path.py  config.py  curvature.py  extend_samples.py  fea_interface.py  none_scalars.csv  none_stress.csv  none_verts.csv  plot_cable_analysis.py  plot_curvature_sensitivity.py  plot_e1e2_sf_surface.py  plot_e1r_surface.py  plot_knit_dir_sensitivity.py  plot_lrest_sweep.py  plot_lrest_sweep.sync-conflict-20260501-214846-J4C6O6O.py  plot_material_e1e2_surface.py  plot_material_section_sobol.py  plot_material_section_sweep.py  plot_motif_comparison.py  plot_nu_surface.py  plot_paper_figures.py  plot_section_profiles.py  plot_section_sensitivity.py  plot_sf_sections.py  plot_sf_surface.py  plot_uniform_sf.py  results_with_curvature.csv  run_boundary_cable.py  run_e1r_grid.py  run_extra_motifs.py  run_lrest_sweep.py  run_material_ext.py  run_nu_grid.py  run_orient_pipeline.py  run_pipeline.py  sampling.py  sobol_analysis.py  surrogate.py  visualization.py
src/: anisotropic_rest_shape.h  best_fit_iso_stretch.cpp  best_fit_iso_stretch_cable.cpp  best_fit_material_distribution.cpp  best_fit_stretch_factors.cpp  best_fit_stretch_factors_2region.cpp  best_fit_stretch_factors_3region.cpp  best_fit_stretch_factors_3region_adaptive.cpp  best_fit_stretch_factors_cable.cpp  composite.cpp  composite3.cpp  fem_batch_nregion.cpp  fem_batch_sensitivity.cpp  genetic_algorithm.cpp  genetic_algorithm2_bestfitmesh.cpp  genetic_algorithm2_bestfitmesh_backup.cpp  genetic_algorithm2_bestfitmesh_backup_changing.cpp  genetic_algorithm2_bestfitmesh_multiple_models.cpp  genetic_algorithm3_heights.cpp  genetic_knitting_directions.cpp  gradient_hessian_check.cpp  inflation.cpp  inflation2.cpp  inflation3.cpp  membrane.cpp  membrane_orthotropic.cpp  membrane_orthotropic_cable.cpp  membrane_orthotropic_rod.cpp  parameter_study_circle.cpp  rod_surface_contact.h  sliding_cable.h  test_file.cpp
(+11138 files in other folders)
